Fixed adjustment for scrollbar for prod and added share button in second location

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,3 +1,7 @@
 .fadebox {
     mask-image: linear-gradient(90deg, var(bg-links) 65%, transparent 83%);
 }
+
+.html-scrollbar-adjust {
+    margin-right: calc(-1 * (100vw - 100%));
+}
